# DeepCritical-HFSpace

./: .env.example  .gitignore  .pre-commit-config.yaml  AFTER_THIS_PR.md  AGENTS.md  BRAINSTORM_EMBEDDINGS_META.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  LLAMAINDEX_INTEGRATION_SPEC.md  META_PLAN.md  Makefile  NEXT_TASK.md  P0_REPR_BUG_ROOT_CAUSE_ANALYSIS.md  README.md  SPEC_12_NARRATIVE_SYNTHESIS.md  SPEC_ARCHITECTURAL_DEBT.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
docs/: ARCHITECTURE.md  STATUS_LLAMAINDEX_INTEGRATION.md  index.md  workflow-diagrams.md
docs/architecture/: HF_FREE_TIER_ANALYSIS.md  design-patterns.md  overview.md  system_registry.md
docs/brainstorming/: 00_ROADMAP_SUMMARY.md  01_PUBMED_IMPROVEMENTS.md  02_CLINICALTRIALS_IMPROVEMENTS.md  03_EUROPEPMC_IMPROVEMENTS.md  04_OPENALEX_INTEGRATION.md  UI_MODE_SELECTION_UX.md
docs/brainstorming/implementation/: 15_PHASE_OPENALEX.md  16_PHASE_PUBMED_FULLTEXT.md
docs/brainstorming/magentic-pydantic/: 00_SITUATION_AND_PLAN.md  01_ARCHITECTURE_SPEC.md  02_IMPLEMENTATION_PHASES.md  REVIEW_PROMPT_FOR_SENIOR_AGENT.md
docs/bugs/: 001_gradio_ui_cutoff.md  002_gradio_ui_investigation.md  003_ui_viewport_redesign.md  004_gradio_intermittent_loading.md  005_services_not_integrated.md  ACTIVE_BUGS.md  AUDIT_FINDINGS_2025_11_30.md  FIX_PLAN_CRITICAL_BUGS.md  FIX_PLAN_MAGENTIC_MODE.md  FIX_UI_SIMPLIFICATION.md  GRADIO_EXAMPLE_VS_CHAT_ARROW_ANALYSIS.md  P0_AIFUNCTION_NOT_JSON_SERIALIZABLE.md  P0_CRITICAL_BUGS.md  P0_HUGGINGFACE_TOOL_CALLING_BROKEN.md  P0_MAGENTIC_MODE_BROKEN.md  P0_ORCHESTRATOR_DEDUP_AND_JUDGE_BUGS.md  P0_SIMPLE_MODE_FORCED_SYNTHESIS_BYPASS.md  P0_SIMPLE_MODE_NEVER_SYNTHESIZES.md  P0_SYNTHESIS_PROVIDER_MISMATCH.md  P1_FREE_TIER_TOOL_EXECUTION_FAILURE.md  P1_GRADIO_EXAMPLE_CLICK_AUTO_SUBMIT.md  P1_GRADIO_SETTINGS_CLEANUP.md  P1_HUGGINGFACE_ROUTER_401_HYPERBOLIC.md  P1_MAGENTIC_STREAMING_AND_KEY_PERSISTENCE.md  P1_MULTIPLE_UX_BUGS.md  P1_NO_SYNTHESIS_FREE_TIER.md  P1_SIMPLE_MODE_REMOVED_BREAKS_FREE_TIER_UX.md  P1_SYNTHESIS_BROKEN_KEY_FALLBACK.md  P2_7B_MODEL_GARBAGE_OUTPUT.md  P2_ADVANCED_MODE_COLD_START_NO_FEEDBACK.md  P2_DUPLICATE_REPORT_CONTENT.md  P2_FIRST_TURN_TIMEOUT.md  P2_ROUND_COUNTER_SEMANTIC_MISMATCH.md  P3_ARCHITECTURAL_GAP_EPHEMERAL_MEMORY.md  P3_ARCHITECTURAL_GAP_STRUCTURED_MEMORY.md  P3_PROGRESS_BAR_POSITIONING.md  SENIOR_AUDIT_RESULTS.md
docs/bugs/archive/: P0_ADVANCED_MODE_TIMEOUT_NO_SYNTHESIS.md  P0_AIFUNCTION_NOT_JSON_SERIALIZABLE.md  P0_ORCHESTRATOR_DEDUP_AND_JUDGE_BUGS.md  P0_REPR_BUG_ROOT_CAUSE_ANALYSIS.md  P0_SIMPLE_MODE_FORCED_SYNTHESIS_BYPASS.md  P2_FIRST_TURN_TIMEOUT.md  (+14 more)
docs/decisions/: 2025-11-27-pr55-evaluation.md
docs/development/: testing.md
docs/future-roadmap/: OPENALEX_INTEGRATION.md  P3_MODAL_INTEGRATION_REMOVAL.md  P3_REMOVE_ANTHROPIC_PARTIAL_WIRING.md  TOOL_ANALYSIS_CRITICAL.md
docs/guides/: deployment.md
docs/implementation/: 01_phase_foundation.md  02_phase_search.md  03_phase_judge.md  04_phase_ui.md  05_phase_magentic.md  06_phase_embeddings.md  07_phase_hypothesis.md  08_phase_report.md  09_phase_source_cleanup.md  10_phase_clinicaltrials.md  11_phase_biorxiv.md  12_phase_mcp_server.md  13_phase_modal_integration.md  14_phase_demo_submission.md  roadmap.md
docs/pending/: 00_priority_summary.md  02_mcp_server_integration.md
docs/specs/: README.md  SPEC_01_DEMO_TERMINATION.md  SPEC_02_E2E_TESTING.md  SPEC_03_OPENALEX_INTEGRATION.md  SPEC_04_MAGENTIC_UX.md  SPEC_05_ORCHESTRATOR_CLEANUP.md  SPEC_06_SIMPLE_MODE_SYNTHESIS.md  SPEC_07_LANGGRAPH_MEMORY_ARCH.md  SPEC_08_INTEGRATE_MEMORY_LAYER.md  SPEC_13_EVIDENCE_DEDUPLICATION.md  SPEC_14_CLINICALTRIALS_OUTCOMES.md  SPEC_15_ADVANCED_MODE_PERFORMANCE.md  SPEC_16_UNIFIED_CHAT_CLIENT_ARCHITECTURE.md  SPEC_18_AGENT_FRAMEWORK_UPGRADE.md
docs/to_do/: DEEP_RESEARCH_ROADMAP.md  REFERENCE_GRADDIO_DEMO_ANALYSIS.md
examples/: README.md  rate_limiting_demo.py
examples/embeddings_demo/: run_embeddings.py
examples/full_stack_demo/: run_full.py
examples/hypothesis_demo/: run_hypothesis.py
examples/modal_demo/: run_analysis.py  test_code_execution.py  verify_sandbox.py
examples/orchestrator_demo/: run_agent.py  run_magentic.py
examples/search_demo/: run_search.py
src/: app.py  mcp_tools.py  orchestrator.py  orchestrator_factory.py  orchestrator_hierarchical.py  orchestrator_magentic.py
src/agent_factory/: judges.py
src/agents/: analysis_agent.py  code_executor_agent.py  hypothesis_agent.py  judge_agent.py  judge_agent_llm.py  magentic_agents.py  report_agent.py  retrieval_agent.py  search_agent.py  state.py  tools.py
src/clients/: base.py  factory.py  huggingface.py  providers.py  registry.py
src/config/: domain.py
src/middleware/: __init__.py  sub_iteration.py
src/orchestrators/: __init__.py  advanced.py  base.py  factory.py  hierarchical.py  langgraph_orchestrator.py  simple.py
src/prompts/: hypothesis.py  judge.py  report.py  search.py  synthesis.py
src/services/: __init__.py  embedding_protocol.py  embeddings.py  llamaindex_rag.py  research_memory.py  statistical_analyzer.py
src/state/: __init__.py
src/tools/: __init__.py  base.py  biorxiv.py  clinicaltrials.py  code_execution.py  openalex.py  pubmed.py  query_utils.py  rate_limiter.py  search_handler.py  web_search.py  websearch.py
src/utils/: citation_validator.py  config.py  exceptions.py  llm_factory.py  models.py  service_loader.py  text_utils.py
tests/: conftest.py
tests/e2e/: conftest.py  test_advanced_mode.py  test_simple_mode.py  test_smoke.py
tests/integration/: test_dual_mode_e2e.py  test_mcp_server.py  test_mcp_tools_live.py  test_modal.py  test_rag_integration.py  test_research_flows.py  test_search_deduplication.py  test_simple_mode_synthesis.py
tests/unit/: test_app_domain.py  test_app_smoke.py  test_app_timeout.py  test_gradio_crash.py  test_hierarchical.py  test_magentic_fix.py  test_magentic_termination.py  test_mcp_tools.py  test_no_webtool_references.py  test_orchestrator.py  test_orchestrator_factory.py  test_streaming_fix.py  test_ui_elements.py
(+75 files in other folders)
